Hacking on BeanDefinitionGenerator